<resources>
    <string name="app_name">ChitChat</string>
    <string name="iniciar_sesión">INICIAR SESIÓN</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="he_olvidado_contra">He olvidado la contraseña</string>
    <string name="cuenta_nueva">CUENTA NUEVA</string>
    <string name="entrar">ENTRAR</string>
    <string name="opciones_inicio">O puedes iniciar con</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="tiktok">TikTok</string>
    <string name="correo">Correo</string>
    <string name="crear">CREAR</string>
    <string name="opciones_registro">O puedes registrarte con</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Frangment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="post">POST</string>
    <string name="descripcion">Descripción</string>
    <string name="imagen" />
    <string name="cerrar" />
    <string name="buscar">Buscar...</string>
    <string name="nombreCompleto">Nombre Completo</string>
    <string name="tags">#tags</string>
    <string name="posts">123 posts</string>
</resources>