<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registro">

    <androidx.cardview.widget.CardView
        android:id="@+id/Registro_2"
        android:layout_width="340dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/opciones2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/opciones_registro"
                android:textColor="#707070"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/titulo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/cuenta_nueva"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/usuario_registro"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:hint="@string/usuario"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#B0B0B0"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo3" />

            <EditText
                android:id="@+id/email_registro"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:hint="@string/correo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#B0B0B0"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usuario_registro" />

            <EditText
                android:id="@+id/contra_registro"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:hint="@string/contraseña"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#B0B0B0"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_registro" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/crear"
                android:textColor="#F60977"

                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contra_registro" />

            <View
                android:id="@+id/divider2"
                android:layout_width="265dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/botones_acceso_rapido"
                android:layout_width="265dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opciones2">

                <ImageView
                    android:id="@+id/google_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/facebook_registro"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/google" />

                <ImageView
                    android:id="@+id/facebook_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/instagram"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/google_registro"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/instagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/instagram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/twitter_registro"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/facebook_registro"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/instagram" />

                <ImageView
                    android:id="@+id/twitter_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/twitter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tiktok_registro"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/instagram"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/gorjeo" />

                <ImageView
                    android:id="@+id/tiktok_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/tiktok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/twitter_registro"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:srcCompat="@drawable/tiktok" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inicio_2"
        android:layout_width="278dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:onClick="iniciar_sesion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/titulo4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:onClick="iniciar_sesion"
                    android:text="@string/iniciar_sesión"
                    android:textColor="#707070"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>