<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/Inicio_sesion"
        android:layout_width="306dp"
        android:layout_height="394dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@color/white"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="center"
                android:text="@string/iniciar_sesión"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_inicio_sesion"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:hint="@string/usuario"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titulo1" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bordes"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:hint="@string/contraseña"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_inicio_sesion" />

            <TextView
                android:id="@+id/he_olvidado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/he_olvidado_contra"
                android:textColor="#F60977"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Registro"
        android:layout_width="260dp"
        android:layout_height="380dp"
        android:layout_marginTop="246dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>